ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -253,7 +254,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assets/mulher-negra-de-moletom-verde-com-as-mãos-no-peito-e-sorrindo.png"
+            src="./assets/mulher-negra-de-moletom-verde-com-as-mãos-no-peito-e-sorrindo.png"
             alt="mulher negra de moletom verde e sorrindo"
           />
         </div>
@@ -457,7 +458,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
+            src="./doutor-feliz-segurando-prancheta-com-pacientes.png"
             alt="doutor feliz segurando prancheta com pacientes"
           />
         </div>
@@ -544,7 +545,7 @@
         </div>
         <div class="col-b">
           <img
-            src="assets/homem-negro-de-moletom-bege-sorrindo-com-smartphone-em-mãos.png"
+            src="./assets/homem-negro-de-moletom-bege-sorrindo-com-smartphone-em-mãos.png"
             alt="homem negro de moletom bege sorrindo com smartphone em mãos"
           />
         </div>
@@ -720,6 +721,6 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
